--- a/PAYDAY Manager 2017/PAYDAY Manager 2017.vcxproj
+++ b/PAYDAY Manager 2017/PAYDAY Manager 2017.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="endStats.cpp" />
     <ClCompile Include="PAYDAY Manager 2017.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
