If you really want to know what I did look at the comments but anyway did some cleanup on infastructure

--- a/PAYDAY Manager 2017/PAYDAY Manager 2017.vcxproj.filters
+++ b/PAYDAY Manager 2017/PAYDAY Manager 2017.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="PAYDAY Manager 2017.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="endStats.cpp">
+    <ClCompile Include="stats.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
